// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render a BookAuthor 1`] = `
<div
  className="book-authors"
>
  Chuck Palahniuk
</div>
`;

exports[`render a BookAuthor with no authors 1`] = `
<div
  className="book-authors"
>
  Unknown autor
</div>
`;
